Bug 661519: Swapped total shares with total sparks, now the most visible metric

--- a/media/css/sharing.css
+++ b/media/css/sharing.css
@@ -30,6 +30,14 @@
     font-size:1.2em;
 }
 
+#wrapper #sharing .block-1 .title {
+    color:#ddd;
+}
+
+#wrapper #sharing .block-1 .title em {
+    color:#ede0ab;
+}
+
 #total-shares-img {
     height:115px;
     width:200px;
